# video_speak_extractor

./: .coveragerc  .gitignore  README.md  pyproject.toml
tests/: test_coordinator.py  test_moviepy_audio_writer.py  test_moviypy_phrases_loader.py  test_video_speak_extractor.py
video_speak_extractor/: __init__.py  coordinator.py  moviepy_audio_writer.py  moviepy_phrases_loader.py  plugin_abc.py  plugin_loader.py  video2phrases.py
video_speak_extractor/plugins/: configure_commas.py  configure_spaces.py  remove_angled_brackets.py  remove_endline_at.py  remove_line_breaks.py  remove_parentesis.py  remove_spaces.py
video_speak_extractor/protocols/: __init__.py  iaudio_writer.py  iphrases_loader.py
