[tool.poetry]
name = "video_speak_extractor"
version = "0.2.2"
description = "Reads a .srt file extracting phrases, splitting the video's audio to match  the .srt phrases and export them to output_dir."
authors = ["Erick Duarte <erickod@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.931"
reorder-python-imports = "^2.7.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
video2phrases = 'video_speak_extractor.video2phrases:extract'